Form is working and is adding new item do adapter. Should add animation to new item that joined the list

--- a/LOOPUIUX/app/src/main/res/values/strings.xml
+++ b/LOOPUIUX/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
   <string name="choose_a_photo">Choose a photo</string>
     <string name="summary">Summary</string>
   <string name="title">Title</string>
+    <string name="url_not_valid">URL not valid. Try again please</string>
+  <string name="url_error_loading">Error uploading URL. Try again please</string>
 </resources>
