--- a/LOOPUIUX/app/src/main/res/values/strings.xml
+++ b/LOOPUIUX/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
   <string name="action_settings">Settings</string>
 
   <string name="menu_home">Home</string>
-  <string name="navbar_text">This is a challenge with the objective of testing my kotlin and UI/UX skills.</string>
+  <string name="navbar_text">This is a challenge with the objective of testing my kotlin and UI/UX skills.\n\n\n The goal of the app is to be a travel companion: take a photo, add a title and a description, save it, and use it as a travel diary</string>
     <string name="url">Url</string>
   <string name="upload">Upload</string>
   <string name="choose_a_photo">Choose a photo</string>
