--- a/LOOPUIUX/app/src/main/res/values/strings.xml
+++ b/LOOPUIUX/app/src/main/res/values/strings.xml
@@ -19,5 +19,9 @@
 
   <string name="lorem_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis ex vitae sagittis viverra. Morbi convallis, mi sed placerat auctor, quam risus faucibus ligula, at maximus ligula massa nec lectus. Pellentesque a dapibus risus. Sed tristique malesuada maximus. Duis id nisi vitae neque porttitor porttitor pulvinar et lectus. Praesent id augue sit amet quam semper ullamcorper. Etiam dignissim tortor erat, ac interdum tellus lacinia at. Pellentesque laoreet egestas nisi. In euismod ligula eu risus commodo tincidunt. Mauris facilisis ex ut magna finibus, id tempus magna congue.Morbi ut tincidunt quam, vitae sollicitudin nibh. Quisque cursus iaculis nunc non mattis. Pellentesque elementum fermentum efficitur. Etiam aliquam ante ac felis feugiat, ac sodales risus semper. Pellentesque laoreet nisl non quam pretium convallis. Vivamus id quam massa. Maecenas turpis mi, maximus nec tempor ut, egestas eu ipsum. Aenean vehicula diam nisi, eget consequat diam ultricies at.</string>
   <string name="add_a_memory">Add a Memory</string>
+  <string name="please_pick_a_photo">Please pick a photo</string>
+  <string name="error_field">Please fill the field</string>
+  <string name="deleting_memory">Deleting a travel memory</string>
+  <string name="deleting_memory_message">Are you sure you want to delete this memory?\nThere is no way back!</string>
 
 </resources>
